refactor: unify duplicate code